
CMAKE_MINIMUM_REQUIRED(VERSION 3.9.1)
PROJECT(pwpaint)

SET(CMAKE_C_COMPILER emcc)
SET(CMAKE_CXX_COMPILER em++)
#SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS -s\ EXPORTED_FUNCTIONS="['_main', '_sayHello', '_setDisplaySize']")
#SET(CMAKE_CXX_FLAGS -s\ EXPORTED_FUNCTIONS="['_sayHello']")

FILE(GLOB sources src/*.cpp)
ADD_EXECUTABLE(pwpaint.html ${sources})


